add worker service